# PEnG-motif

./: .flake8  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  make.sh  make_release_binaries.sh
data/: MafK.fasta  MafK_100seqs.fasta
scripts/: pwm2iupac.py  shoot_peng.py
src/: CMakeLists.txt  Global.cpp  Global.h  PatternCensus.cpp  PatternCensus.h  base_pattern.cpp  base_pattern.h  gap_mask.cpp  gap_mask.h  helper-inl.h  iupac_alphabet.cpp  iupac_alphabet.h  iupac_pattern.cpp  iupac_pattern.h  log.h  main.cpp  peng.cpp  peng.h  shared  utils.h
src/shared/: Alphabet.cpp  Alphabet.h  BackgroundModel.cpp  BackgroundModel.h  Sequence.cpp  Sequence.h  SequenceSet.cpp  SequenceSet.h  utils.h
test/: CMakeLists.txt  basic_tests.cpp  main.cpp  main.h  test_base_pattern.cpp
test/test_data/: default_sequence_set.fa
