cmake_minimum_required(VERSION 2.8.12)
project(peng_motif CXX)

set (PENG_VERSION_MAJOR 0)
set (PENG_VERSION_MINOR 1)
set (PENG_VERSION_PATCH 0)
set (PENG_DATE "09-11-2016")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

#SET(GCC_PROFILER_FLAG "-pg")
#SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_PROFILER_FLAG}" )
#SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_PROFILER_FLAG}" )

INSTALL(FILES
  LICENSE
  README.md
  PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
  DESTINATION ./
)

include_directories(src)
add_subdirectory(src)

